--- a/app/views/merchants/show.html.erb
+++ b/app/views/merchants/show.html.erb
@@ -18,9 +18,9 @@
     <% @merchant.items_ready_to_ship.each do |item| %>
       <div id="item-<%= item.id %>">
         <h4><%= item.name %> with invoices:<br>
-          <% item.invoices.each do |invoice| %>
+          <% item.ordered_invoices.each do |invoice| %>
             <%= link_to "#{invoice.id}", "/merchants/#{@merchant.id}/invoices/#{invoice.id}" %>
-            Ordered on: <%= invoice.get_invoice_item(item.id).created_at.strftime("%A, %B %d, %Y") %><br> 
+            Ordered on: <%= invoice.get_invoice_item(item.id).created_at.strftime("%A, %B %d, %Y") %><br>
           <% end %>
         </h4>
       </div>
