--- a/app/views/admin_merchants/index.html.erb
+++ b/app/views/admin_merchants/index.html.erb
@@ -10,19 +10,23 @@
   <% end %>
 </div>
 
-<h2>List of All Merchants:</h2>
-<% @merchants.each do |merchant| %>
-  <div id="merchants-<%= merchant.id %>">
+<h2>All Merchants:</h2>
 
-  <h3>-<%= link_to "#{merchant.name}", "/admin/merchants/#{merchant.id}" %></h3>
+<h3>Enabled Merchants</h3>
+<% @merchants.each do |merchant| %>
+<div id="merchants-<%= merchant.id %>">
   <% if merchant.status == 'enabled' %>
+    <h3>-<%= link_to "#{merchant.name}", "/admin/merchants/#{merchant.id}" %></h3>
     Status: <%= 'available' %>
     <%= button_to "Disable #{merchant.name}", "/merchants/#{merchant.id}?button=true", method: :patch %><br>
-  <% else merchant.status == 'disabled' %>
+  <% end %>
+<% end %>
+<h3>Disabled Merchants</h3>
+<% @merchants.each do |merchant| %>
+  <% if merchant.status == 'disabled' %>
+    <h3>-<%= link_to "#{merchant.name}", "/admin/merchants/#{merchant.id}" %></h3>
     Status: <%= 'unavailable' %>
     <%= button_to "Enable #{merchant.name}", "/merchants/#{merchant.id}?button=true", method: :patch %><br>
   <% end %>
 <% end %>
 </div>
-
-
