feat: admin invoice show page displays total revenue for the invoice

--- a/app/views/admin_invoices/show.html.erb
+++ b/app/views/admin_invoices/show.html.erb
@@ -12,3 +12,5 @@ Status: <%= "#{@invoice.status}"  %><br>
 
 Created: <%= "#{@invoice.created_at.strftime("%A, %B %d, %Y")}"  %><br>
 Customer Name: <%= "#{@invoice.customer.first_name} #{@invoice.customer.last_name}"  %><br>
+
+<h2>Total Revenue: $<%= @invoice.total_revenue.to_s.insert(-3,".") %></h2>
