--- a/app/views/admin_merchants/index.html.erb
+++ b/app/views/admin_merchants/index.html.erb
@@ -1,4 +1,5 @@
 <h1>Admin Merchant Index Page</h1><br>
+<%= link_to "Create a New Merchant", "/admin/merchants/new" %>
 
 <div id="top_5_merchants">
   <h4>Top 5 merchants:</h4>
