Feat: each page on the site has a link to the Github Repo info page

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,5 +14,6 @@
       <p><%= message %></p>
     <% end %>
     <%= yield %>
+    <%= link_to "GitHub Repository info", "/github_info" %>
   </body>
 </html>
