--- a/app/views/github_info/show.html.erb
+++ b/app/views/github_info/show.html.erb
@@ -2,3 +2,13 @@
 
 <h3>Name: <%= @repo.name %></h3>
 <p>Commits: <%= @commits %></p>
+<p>Usernames:
+  <% @usernames.each do |user| %>
+    <% if user[:login] != "BrianZanti" ||
+          user[:login] != "timomitchel" ||
+          user[:login] != "scottalexandra" ||
+          user[:login] != "jamisonordway"%>
+    <p> <%= user[:login] %></p>
+    <% end %>
+  <% end %>
+</p>
