Feat: Github Info Page has names of all contributors (except instructors)

--- a/app/views/github_info/show.html.erb
+++ b/app/views/github_info/show.html.erb
@@ -4,10 +4,10 @@
 <p>Commits: <%= @commits %></p>
 <p>Usernames:
   <% @usernames.each do |user| %>
-    <% if user[:login] != "BrianZanti" ||
-          user[:login] != "timomitchel" ||
-          user[:login] != "scottalexandra" ||
-          user[:login] != "jamisonordway"%>
+    <% if (user[:login] != "BrianZanti" &&
+           user[:login] != "timomitchel" &&
+           user[:login] != "scottalexandra" &&
+           user[:login] != "jamisonordway") %>
     <p> <%= user[:login] %></p>
     <% end %>
   <% end %>
