--- a/app/views/merchant_items/index.html.erb
+++ b/app/views/merchant_items/index.html.erb
@@ -8,6 +8,7 @@
 <% @merchant.top_five_items_by_revenue.each do |item| %>
   <p><%= link_to item.name, "/merchants/#{@merchant.id}/items/#{item.id}" %>
   Total Revenue: $<%= item.invoice_items.items_total_revenue.to_s.insert(-3,'.') %></p>
+  Top selling date for was: <%= item.date_with_most_sales.strftime("%A, %B %d, %Y") %>
 <% end %><hr>
 </div>
 <%= link_to "Create New Item", "/merchants/#{@merchant.id}/items/new" %>
