feat: update merchants show controller with link to discounts index and create discounts controller and view

--- a/app/views/merchants/show.html.erb
+++ b/app/views/merchants/show.html.erb
@@ -3,6 +3,8 @@
 
 <%= link_to "Merchant's Invoices", "/merchants/#{@merchant.id}/invoices" %>
 
+<%= link_to "View All Discounts", "/merchants/#{@merchant.id}/bulk_discounts" %>
+
 <h2><%= @merchant.name %>'s Statistics:</h2>
 
 <div id="statistics">
