test: merchant bulk discount index should have a link to create new discounts

--- a/app/views/merchant_discounts/index.html.erb
+++ b/app/views/merchant_discounts/index.html.erb
@@ -1,3 +1,4 @@
+<h1>Discounts</h1>
 <div id="discounts">
    <% @merchant.bulk_discounts.each do |discount| %>
     <p>Discount Id: <%= link_to "#{discount.id}", "/merchants/#{@merchant.id}/bulk_discounts/#{discount.id}" %></p>
