--- a/app/views/merchant_discounts/index.html.erb
+++ b/app/views/merchant_discounts/index.html.erb
@@ -4,5 +4,8 @@
     <p>Discount Id: <%= link_to "#{discount.id}", "/merchants/#{@merchant.id}/bulk_discounts/#{discount.id}" %></p>
     <p>Percentage Discount: <%= discount.percentage_discount %></p>
     <p>Quantity Threshold: <%= discount.quantity_threshold %></p>
+    <br>
     <% end %>
 </div>
+
+<%= link_to "Create New Discount", "/merchants/#{@merchant.id}/bulk_discounts/new" %>
