--- a/app/views/merchant_discounts/index.html.erb
+++ b/app/views/merchant_discounts/index.html.erb
@@ -1,7 +1,7 @@
 <h1>Discounts</h1>
 <div id="discounts">
    <% @merchant.bulk_discounts.each do |discount| %>
-   <div class="discount-#{discount.id}">
+   <div id= <%=  "discount-#{discount.id}"%>>
     <p>Discount Id: <%= link_to "#{discount.id}", "/merchants/#{@merchant.id}/bulk_discounts/#{discount.id}" %></p>
     <p>Percentage Discount: <%= discount.percentage_discount %></p>
     <p>Quantity Threshold: <%= discount.quantity_threshold %></p>
