--- a/app/views/merchant_discounts/show.html.erb
+++ b/app/views/merchant_discounts/show.html.erb
@@ -1,1 +1,5 @@
 <h1>Bulk Discount Details</h1>
+
+<p>Discount Id: <%= @discount.id %></p>
+<p>Percentage Discount: <%= @discount.percentage_discount %></p>
+<p>Quantity Threshold: <%= @discount.quantity_threshold %></p>
