--- a/app/views/merchant_discounts/show.html.erb
+++ b/app/views/merchant_discounts/show.html.erb
@@ -3,3 +3,5 @@
 <p>Discount Id: <%= @discount.id %></p>
 <p>Percentage Discount: <%= @discount.percentage_discount %></p>
 <p>Quantity Threshold: <%= @discount.quantity_threshold %></p>
+
+<%= link_to 'Edit', "/merchants/#{@discount.merchant.id}/bulk_discounts/#{@discount.id}/edit" %>
