--- a/app/views/merchant_discounts/show.html.erb
+++ b/app/views/merchant_discounts/show.html.erb
@@ -1,7 +1,9 @@
 <h1>Bulk Discount Details</h1>
 
 <p>Discount Id: <%= @discount.id %></p>
-<p>Percentage Discount: <%= @discount.percentage_discount %>%</p>
-<p>Quantity Threshold: <%= @discount.quantity_threshold %></p>
+<div id="details">
+  <p>Percentage Discount: <%= @discount.percentage_discount %>%</p>
+  <p>Quantity Threshold: <%= @discount.quantity_threshold %></p>
+</div>
 
 <%= link_to 'Edit', "/merchants/#{@discount.merchant.id}/bulk_discounts/#{@discount.id}/edit" %>
