--- a/app/views/merchant_invoices/show.html.erb
+++ b/app/views/merchant_invoices/show.html.erb
@@ -43,4 +43,6 @@
   </div>
 <% end %>
 
-<h2>Total Revenue: $<%= @invoice.total_revenue.to_s.insert(-3,".") %> </h2>
+<% if @invoice.total_revenue != 0 %>
+  <h2>Total Revenue: $<%= @invoice.total_revenue.to_s.insert(-3,".") %> </h2>
+<% end %>
