--- a/app/views/admin_invoices/show.html.erb
+++ b/app/views/admin_invoices/show.html.erb
@@ -23,3 +23,7 @@ Invoice Item Status: <%= invoice_item.status %><br>
 <% if @invoice.total_revenue != 0 %>
   <h2>Total Revenue: $<%= @invoice.total_revenue.to_s.insert(-3,".") %></h2>
 <% end %>
+
+<% if @invoice.total_discounted_revenue != 0 %>
+  <h2>Total Discounted Revenue: $<%= @invoice.total_discounted_revenue.to_s.insert(-3,".") %></h2>
+<% end %>
