feat: bulk discount index page displays the next three us holidays and their date

--- a/app/views/merchant_discounts/index.html.erb
+++ b/app/views/merchant_discounts/index.html.erb
@@ -13,3 +13,11 @@
 </div>
 
 <%= link_to "Create New Discount", "/merchants/#{@merchant.id}/bulk_discounts/new" %>
+
+<h1>Upcoming Holidays</h1>
+<p>Holiday: <%= @holidays.name_1 %>.
+ Date: <%= @holidays.date_1 %></p>
+<p>Holiday: <%= @holidays.name_2 %>.
+ Date: <%= @holidays.date_2 %></p>
+<p>Holiday: <%= @holidays.name_3 %>.
+ Date: <%= @holidays.date_3 %></p>
